[gd_scene load_steps=6 format=2]

[ext_resource path="res://Art/Calibri.tres" type="DynamicFont" id=1]
[ext_resource path="res://Art/CalibriSmall.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scripts/Question.gd" type="Script" id=3]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.00662252, 1 )
colors = PoolColorArray( 0, 0, 0, 1, 0.429688, 0.429688, 0.429688, 1, 0.71875, 0.71875, 0.71875, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[node name="Question" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.498039 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -30.6523
margin_top = 2.37842
margin_right = 97.3477
margin_bottom = 2.37842
mouse_filter = 2
texture = SubResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuestionTitle" type="Label" parent="."]
anchor_right = 1.0
margin_left = 150.0
margin_top = 150.0
margin_right = -150.0
margin_bottom = 400.0
custom_fonts/font = ExtResource( 1 )
text = "Waarom mag een kapotte ovenschaal niet bij het oude glas?"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="B0" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -910.0
margin_top = -600.0
margin_right = 910.0
margin_bottom = -500.0
custom_fonts/font = ExtResource( 2 )
toggle_mode = true
text = "Omdat het geen verpakking is en omdat glas op een hogere temperatuur smelt dan verpakkingsglas."
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="B1" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -910.0
margin_top = -450.0
margin_right = 910.0
margin_bottom = -350.0
custom_fonts/font = ExtResource( 2 )
toggle_mode = true
text = "Omdat het geen verpakking is en omdat glas op een hogere temperatuur smelt dan verpakkingsglas."
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="B2" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -910.0
margin_top = -300.0
margin_right = 910.0
margin_bottom = -200.0
custom_fonts/font = ExtResource( 2 )
toggle_mode = true
text = "Omdat het geen verpakking is en omdat glas op een hogere temperatuur smelt dan verpakkingsglas."
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="B3" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -910.0
margin_top = -150.0
margin_right = 910.0
margin_bottom = -50.0
custom_fonts/font = ExtResource( 2 )
toggle_mode = true
text = "Omdat het geen verpakking is en omdat glas op een hogere temperatuur smelt dan verpakkingsglas."
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="B0" to="." method="_on_B0_pressed"]
[connection signal="pressed" from="B1" to="." method="_on_B1_pressed"]
[connection signal="pressed" from="B2" to="." method="_on_B2_pressed"]
[connection signal="pressed" from="B3" to="." method="_on_B3_pressed"]
